--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.idea
 .gradle
 /build/
 
@@ -12,3 +13,11 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+
+
+#Added by cargo
+#
+#already existing elements are commented out
+
+/target
+**/*.rs.bk
